# rsip

./: Cargo.toml  LICENSE  README.md  todo.md
.github/workflows/: rust-ci.yml
examples/: unauthorized_register.rs
macros/: Cargo.toml
macros/src/: header_ext_impl.rs  headers.rs  lib.rs  typed.rs  typed_header.rs  untyped.rs  untyped_header.rs
rsip-derives/: Cargo.toml  LICENSE  README.md
rsip-derives/src/: lib.rs  newtype.rs  to_typed_header.rs  typed_header.rs  untyped_header.rs
src/: codec.rs  error.rs  lib.rs
src/common/: auth.rs  content_type.rs  language.rs  method.rs  mod.rs  status_code.rs  transport.rs  version.rs
src/common/auth/: algorithm.rs  mod.rs  qop.rs  scheme.rs
src/common/uri/: auth.rs  host_with_port.rs  mod.rs  schema.rs  scheme.rs  uri_with_params.rs  uri_with_params_list.rs
src/error/: mod.rs  tokenizer_error.rs
src/headers/: header.rs  mod.rs
src/headers/auth/: algorithm.rs  mod.rs  qop.rs  scheme.rs
src/headers/header/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  event.rs  expires.rs  from.rs  in_reply_to.rs  max_forwards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  record_route.rs  reply_to.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  subscription_state.rs  supported.rs  (+7 more)
src/headers/typed/: accept.rs  alert_info.rs  authorization.rs  call_info.rs  content_disposition.rs  content_type.rs  cseq.rs  error_info.rs  from.rs  media_type.rs  mod.rs  proxy_authenticate.rs  proxy_authorization.rs  record_route.rs  route.rs  to.rs  via.rs  warning.rs  www_authenticate.rs
src/headers/untyped/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  event.rs  expires.rs  from.rs  in_reply_to.rs  max_forwards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  (+17 more)
src/message/: header_macros.rs  headers_ext.rs  message_ext.rs  mod.rs  request.rs  response.rs  sip_message.rs
src/services/: auth.rs  digest_generator.rs  mod.rs
tests/: lib.rs
tests/common/: method.rs  mod.rs  status_code.rs  transport.rs  version.rs
tests/headers/: accept.rs  authorization.rs  contact.rs  content_length.rs  cseq.rs  from.rs  max_forwards.rs  media_type.rs  mod.rs  to.rs  via.rs  www_authenticate.rs
tests/message/: has_headers.rs  message.rs  mod.rs  request.rs  response.rs
tests/services/: auth.rs
tests/support/: has_headers_impl.rs  mod.rs
(+178 files in other folders)
