[package]
name = "rsip"
version = "0.1.1"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"
description = "SIP Rust library, parser & generator of SIP"
repository = "https://github.com/vasilakisfil/rsip"
documentation = "https://docs.rs/rsip"
keywords = ["sip", "3261", "session", "voip", "webrtc"]
categories = ["parser-implementations", "parsing", "network-programming"]
license-file = "LICENSE"


[workspace]
members = [
    "rsip-derives",
]

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "1.0.1"
nom = { version = "6.1.2", features = ["alloc", "regexp"] }
rsip-derives = { version = "0.1.0", path = "./rsip-derives" }
md-5 = "0.9.1"
sha2 = "0.9.5"

[dev-dependencies]
quote = "1.0.9"
