[package]
name = "rsip-derives"
version = "0.3.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"
description = "rsip helpful macros, for internal use mostly"
repository = "https://github.com/vasilakisfil/rsip/tree/master/rsip-derives"
keywords = ["sip", "rsip", "macros", "derive", "derives"]
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.65", features = ["extra-traits"] }
proc-macro2 = "1.0.27"
darling = "0.13.0"
